Jekyll theme change revert

--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-theme                  : "minimal-mistakes-jekyll"
-remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "contrast" # , "default", "air", "aqua", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+# theme                  : "minimal-mistakes-jekyll"
+# remote_theme           : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -117,7 +117,7 @@ author:
       icon: "fas fa-fw fa-envelope-square"
       # url: mailto:your.name@email.com
     - label: "LinkedIn"
-      icon: "fas fa-linkedin-in"
+      icon: "fas fa-fw fa-linkedin-in"
       url: "https://www.linkedin.com/in/namansharma-in/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
